--- a/indes.html
+++ b/indes.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="ie=egde">
-	<link rel="stylesheet" type="text/css" href="css/index.css">
+	<link rel="stylesheet" href="index.css">
 	<link rel="stylesheet" href="normalise.css">
 	<title>Betty Foods</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
